# latent_experiment

./: .gitignore  data_generate_pipeline.py  dataset_loader.py  download_unicamp_namss.py  example_yolo_fault_detection.py  experiment.md  k2_vision_pipeline.py  pyproject.toml  sample_trained_k2_inference.py  train_vision_lang_model.py  transfer_learning_llm.py  vision_en_trainer.py  wandb_experiment.py  whathapened.md
models/k2/: config.json  generation_config.json
seismic_k2/: __init__.py  config.py
seismic_k2/dataset_generator/: __init__.py  generate.py  image_utils.py  nli.py  prompts.py  text_utils.py  unicamp_dataset.py  verify_generated.py  vllm_client.py
seismic_k2/fault/: __init__.py  create_overlay_sft.py  dataset.py  detection.py  example_overlay.py  overlay.py  yolo_train.py
seismic_k2/vlm/: __init__.py  k2_vision.py  sample_inference.py
