[project]
name = "latent-experiment"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.46.1",
    "datasets>4.1.0,<4.4.0",
    "peft>=0.18.0",
    "pillow>=12.2.0",
    "protobuf>=7.34.1",
    "pytorch-metric-learning>=2.9.0",
    "requests>=2.34.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0,<2.11.0",
    "torchvision>=0.25.0,<0.26.0",
    "transformers>5.1.0,<=5.5.0",
    "trl>0.19.0,<=0.24.0",
    "unsloth>=2026.5.0",
]
